@@ -29,6 +29,7 @@
 - added two requested features -- MySqlDataReader.GetFieldType(string columnname) &
   MySqlDataReader.GetOrdinal() includes the name of the column in the exception when not found
   (bug #47467)
+- Added trace message in exception blog in MySqlConnection.Abort() method (bug #52769)
 
 Version 6.0.5
 - ensure that MySqlPacket always has a valid encoding. This prevents null reference exceptions in ReadString()
